k8s/overlays/platform-stg/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bifrost-platform-stg
  labels:
    app.kubernetes.io/part-of: bifrost-platform
    bifrost.io/environment: platform-stg
